@@ -105,6 +105,10 @@ mode=""
 jwt_token_client_secret=""
 jwt_token_user_password=""
 
+# Burst Traffic
+enable_burst=false
+burstTraffic=3000
+
 function get_ssh_hostname() {
     ssh -G "$1" | awk '/^hostname / { print $2 }'
 }
@@ -138,10 +142,13 @@ function usage() {
     echo ""
 }
 
-while getopts "c:m:d:w:j:i:e:x:y:g:z:tp:u:k:l:n:r:s:q:b:f:o:v:k:h" opts; do
+while getopts "c:a:m:d:w:j:i:e:x:y:g:z:t:p:u:k:l:n:r:s:q:b:f:o:v:k:h" opts; do
     case $opts in
     c)
         concurrent_users+=("${OPTARG}")
+        ;;
+    a)
+        enable_burst=${OPTARG}
         ;;
     m)
         heap_sizes+=("${OPTARG}")
@@ -259,6 +266,13 @@ fi
 if ! [[ $jmeter_client_heap_size =~ $heap_regex ]]; then
     echo "Please specify a valid heap for JMeter Client."
     exit 1
+fi
+
+# Check if the variable is true
+if [ "$enable_burst" = true ]; then
+    burstTraffic=3000
+else
+    burstTraffic=0
 fi
 
 declare -ag heap_sizes_array
@@ -579,7 +593,7 @@ function test_scenarios() {
                 credentials="$superAdminUsername:$superAdminPassword"
                 base64EncodedCredentials=$(echo -n "$credentials" | base64)
                 time=$(expr "$test_duration" \* 60)
-                declare -ag jmeter_params=("concurrency=$users" "time=$time" "host=$lb_host" "port=$is_port" "adminCredentials=$base64EncodedCredentials")
+                declare -ag jmeter_params=("concurrency=$users" "time=$time" "host=$lb_host" "port=$is_port" "adminCredentials=$base64EncodedCredentials" "noOfBurst=$burstTraffic")
                 local tenantMode=${scenario[tenantMode]}
                 if [ "$tenantMode" = true ]; then
                       jmeter_params+=" -JtenantMode=true -JnoOfTenants=$noOfTenants -JspCount=$spCount -JidpCount=$idpCount -JuserCount=$userCount -JjwtTokenUserPassword=$jwt_token_user_password -JjwtTokenClientSecret=$jwt_token_client_secret"
@@ -587,7 +601,7 @@ function test_scenarios() {
 
                 before_execute_test_scenario
 
-                export JVM_ARGS="-Xms$jmeter_client_heap_size -Xmx$jmeter_client_heap_size -XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:$report_location/jmeter_gc.log $JMETER_JVM_ARGS"
+                export JVM_ARGS="-Xms$jmeter_client_heap_size -Xmx$jmeter_client_heap_size -Xloggc:$report_location/jmeter_gc.log $JMETER_JVM_ARGS"
 
                 local jmeter_command="jmeter -n -t $script_dir/$jmx_file"
                 for param in "${jmeter_params[@]}"; do
